# quillmark

./: .copilot-instructions.md  .devcontainer.json  .gitignore  .gitmodules  .readthedocs.yaml  ACROFORM_FIX.md  AGENTS.md  CHANGES.md  CI_CD.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  ERROR_SYSTEM_EVALUATION.md  FEATURE.md  IMPROVED_DESIGN.md  INVESTIGATION_NONE_ENCODING.md  MIGRATION.md  PLATE_REFACTOR.md  QUILL_TOML_ENHANCEMENT_PROPOSAL.md  README.md  REGISTRY_DESIGN.md  WASM_MIGRATION.md  WEB_LIB.md  architectural-ergonomics-assessment.md  complete-yaml-example.md  docs-requirements.txt  ergonomics-assessment.md  json-schema-config-analysis.md  mkdocs.yml  package-lock.json  package.json  release.toml  yaml-config-analysis.md
.cargo/: config.toml
.github/: copilot-instructions.md
bindings/quillmark-cli/: Cargo.toml  README.md
bindings/quillmark-cli/src/: errors.rs  main.rs
bindings/quillmark-cli/src/commands/: render.rs
bindings/quillmark-python/: Cargo.toml
bindings/quillmark-python/tests/: conftest.py  test_engine.py
crates/bindings/cli/: Cargo.toml  README.md
crates/bindings/cli/src/: errors.rs  main.rs  output.rs
crates/bindings/cli/src/commands/: info.rs  mod.rs  render.rs  schema.rs  validate.rs
designs/: ACROFORM.md  ACROFORM_UTF8_ISSUE.md  API_REWORK.rs  ARCHITECTURE.md  CI_CD.md  DESIGN.md  DIAGNOSTIC_REC.md  DOC_RECOMMEND.md  ERROR.md  ERROR_PROPOSAL.md  ERROR_PROPOSAL_SUMMARY.md  ERROR_SYSTEM_EVALUATION.md  PARSE.md  PARSING_REWORK.md  PRODUCTION.md  PYTHON.md  QUILL.md  QUILLMARK_MCP.md  QUILLMARK_UPGRADE.MD  QUILL_DESIGN.md  QUILL_VALUE.md  README.md  ROADMAP.md  SCHEMAS.md  SECURITY_REC.md  WASM.md  WASM_API.md  WASM_DESIGN.md  WEB_LIB.md
docs/: README.md  index.md  requirements.txt
pyquillmark/: .gitignore  Cargo.toml  README.md  pyproject.toml
pyquillmark/examples/: basic.py  batch.py
pyquillmark/python/pyquillmark/: __init__.py  __init__.pyi
pyquillmark/src/: errors.rs  lib.rs  types.rs
pyquillmark/tests/: conftest.py  test_engine.py  test_parse.py  test_quill.py  test_render.py
quillmark/: CONTRIBUTING.md  Cargo.toml
quillmark-acroform/: Cargo.toml  README.md
quillmark-acroform/src/: error_mapping.rs  lib.rs
quillmark-acroform/tests/: integration_test.rs  workflow_test.rs
quillmark-cli/: Cargo.toml  README.md
quillmark-cli/src/: main.rs
quillmark-cli/tests/: cli_test.rs
quillmark-core/: CONTRIBUTING.md  Cargo.toml
quillmark-core/docs/: API.md  JSON_CONTRACT.md  backend.md  errors.md  lib.md  parse.md  parsing.md  templating.md
quillmark-core/docs/designs/: PARSE.md
quillmark-core/src/: backend.rs  error.rs  lib.rs  parse.rs  quill.rs  schema.rs  templating.rs  typst.rs  validation.rs  value.rs
quillmark-core/tests/: integration_templating.rs  test_example_quills.rs
quillmark-fixtures/: Cargo.toml  README.md  package.json
quillmark-fixtures/resources/: bubble.md  extended_metadata_demo.md  frontmatter_demo.md  ice_cream.md  quick_test.md  sample_converted.typ  taro.md  usaf_memo.md
quillmark-fixtures/resources/appreciated_letter/: Quill.toml  glue.typ
quillmark-fixtures/resources/bubble/: Quill.toml  glue.typ
quillmark-fixtures/resources/ice-cream/: .quillignore  Quill.toml  glue.typ  quill.toml
quillmark-fixtures/resources/ice_cream/: Quill.toml  glue.typ
quillmark-fixtures/resources/simple-quill/: glue.typ
quillmark-fixtures/resources/taro/: Quill.toml  glue.typ  taro.md
quillmark-fixtures/resources/usaf-memo/: .quillignore  Quill.toml  quill.toml
quillmark-fixtures/resources/usaf_form_8/: usaf_form_8.md
quillmark-fixtures/resources/usaf_memo/: Quill.toml  glue.typ
quillmark-fixtures/src/: lib.rs
quillmark-fuzz/: Cargo.toml  README.md
quillmark-fuzz/proptest-regressions/: convert_fuzz.txt
quillmark-fuzz/src/: convert_fuzz.rs  parse_fuzz.rs
quillmark-python/: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
quillmark-python/examples/: basic.py  batch.py  workflow_demo.py
quillmark-python/python/quillmark/: __init__.pyi
quillmark-python/src/: errors.rs  lib.rs  types.rs
quillmark-python/tests/: conftest.py  playground.ipynb  test_api_requirements.py  test_engine.py  test_parse.py  test_quill.py  test_render.py
quillmark-typst/: API.md  CONTRIBUTING.md  CONVERT.md  Cargo.toml  PARSE.md  sample_output.typ
quillmark-typst/docs/: compile.md  convert.md  lib.md
quillmark-typst/docs/designs/: CONVERT.md
quillmark-typst/examples/: convert_demo.rs  demo.rs
quillmark-typst/proptest-regressions/: convert.txt  filters.txt
quillmark-typst/src/: compile.md  compile.rs  compiler.rs  convert.md  convert.rs  error_mapping.rs  filters.rs  lib.md  lib.rs  world.rs
quillmark-typst/tests/: native_fonts_feature_test.rs
quillmark-wasm/: Cargo.toml  README.md  basic.test.js  test-types.mjs
quillmark-wasm/e2e-tests/: README.md  TEST_SUMMARY.md  basic-api.test.js  edge-cases.test.js  package.json  rendering.test.js  test-helpers.js  vite.config.js
quillmark-wasm/e2e-tests/fixtures/: test-data.js
quillmark-wasm/src/: engine.rs  error.rs  lib.rs  quill.rs  types.rs  workflow.rs
quillmark-wasm/tests/: quillLoader.js  quill_from_files_test.rs  usaf_form_8.test.js  usaf_memo.test.js  wasm_bindings.rs  web_input_quill_e2e.rs
quillmark/docs/: lib.md  orchestration.md  quillmark.md  quillref.md  workflow.md
quillmark/examples/: appreciated_letter.rs  auto_glue.rs  bubble.rs  hello-quill-example.rs  hello-quill.rs  ice_cream.rs  json_glue.rs  quill_engine_demo.rs  simple-architecture-demo.rs  taro.rs  test_defaults.rs  usaf_form_8.rs  usaf_memo.rs
quillmark/src/: lib.rs  orchestration.rs  quillmark.rs  workflow.rs
quillmark/tests/: acroform_integration_tests.rs  api_rework_test.rs  auto_glue_test.rs  backend_registration_test.rs  common.rs  default_quill_test.rs  default_values_test.rs  dynamic_assets_test.rs  dynamic_fonts_test.rs  feature_flag_test.rs  fixture_test.rs  integration_test.rs  json_glue_test.rs  mock_backend.rs  quill_engine_test.rs  validation_test.rs  warning_propagation_test.rs
quillmark/tests/common/: mod.rs
(+388 files in other folders)
