[workspace]
members = [
    "quillmark-core",
    "quillmark",
    "quillmark-typst",
    "quillmark-fixtures",
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"

# Templating
minijinja = "2.0"

# Test and dev dependencies
tempfile = "3.0"
