[workspace]
members = [
    "quillmark-core",
    "quillmark",
    "quillmark-typst",
    "quillmark-fixtures",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
# Core dependencies
serde = { version = "~1.0", features = ["derive"] }
serde_yaml = "~0.9"
serde_json = "~1.0"
toml = "~0.9"

thiserror = "~2.0"
anyhow = "~1.0"

# Templating
minijinja = "~2.12"

# Test and dev dependencies
tempfile = "~3.23"
