[workspace]
members = [
    "quillmark-core",
    "quillmark",
    "quillmark-typst",
    "quillmark-fixtures",
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
serde = { version = "~1.0", features = ["derive"] }
serde_yaml = "~0.9"
serde_json = "~1.0"
toml = "~0.9"

thiserror = "~2.0"
anyhow = "~1.0"

# Templating
minijinja = "~2.12"

# Typst backend dependencies
fontdb = "0.21.0"
pulldown-cmark = "0.13.0"
time = { version = "0.3.44", features = ["formatting", "parsing"] }
typst = "0.13.1"
typst-kit = "0.13.1"
typst-pdf = "0.13.1"
typst-svg = "0.13.1"
dirs = "6.0"

# Test and dev dependencies
tempfile = "~3.23"
