[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pyquillmark"
version = "0.1.0"
description = "Python bindings for Quillmark - template-first Markdown rendering"
authors = [{ name = "Quillmark Contributors" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: Markup",
]
keywords = ["markdown", "pdf", "typst", "rendering", "templates"]

[project.urls]
Homepage = "https://github.com/nibsbin/quillmark"
Repository = "https://github.com/nibsbin/quillmark"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "pyquillmark._pyquillmark"
include = ["python/pyquillmark/**/*.py", "python/pyquillmark/py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
