[package]
name = "quillmark-acroform"
version.workspace = true
edition.workspace = true
include.workspace = true
readme.workspace = true
description = "AcroForm backend for Quillmark - PDF form field manipulation"
license = "Apache-2.0"
documentation = "https://docs.rs/quillmark-acroform"
homepage = "https://github.com/nibsbin/quillmark"
repository = "https://github.com/nibsbin/quillmark"

[dependencies]
acroform = "0.0.8"
anyhow = { workspace = true }
minijinja = { workspace = true }
quillmark-core = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
