[package]
name = "quillmark-acroform"
version.workspace = true
edition.workspace = true
include.workspace = true
readme.workspace = true
description = "AcroForm backend for Quillmark"
license = "Apache-2.0"
documentation = "https://docs.rs/quillmark-acroform"
homepage = "https://github.com/nibsbin/quillmark"
repository = "https://github.com/nibsbin/quillmark"

[dependencies]
quillmark-core = { workspace = true }
serde_json = { workspace = true }
minijinja = { workspace = true }
thiserror = { workspace = true }
acroform = "0.0.10"

[dev-dependencies]
tempfile = { workspace = true }
quillmark-fixtures = { workspace = true }
quillmark = { workspace = true, features = ["acroform"] }