[package]
name = "quillmark-cli"
version.workspace = true
edition.workspace = true
description = "Minimal CLI for testing Quillmark packages locally"
license = "Apache-2.0"
documentation = "https://docs.rs/quillmark-cli"
homepage = "https://github.com/nibsbin/quillmark"
repository = "https://github.com/nibsbin/quillmark"

[dependencies]
quillmark-core = { workspace = true }
quillmark = { workspace = true, features = ["typst"] }
clap = { version = "~4.5", features = ["derive"] }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
