[package]
name = "quillmark-cli"
version.workspace = true
edition.workspace = true
description = "Command-line interface for Quillmark"
license = "Apache-2.0"
documentation = "https://docs.rs/quillmark-cli"
homepage = "https://github.com/nibsbin/quillmark"
repository = "https://github.com/nibsbin/quillmark"

[dependencies]
quillmark = { workspace = true, features = ["typst"] }
quillmark-core = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
anyhow = { workspace = true }
