[package]
name = "quillmark-cli"
version.workspace = true
edition.workspace = true
description = "Command-line interface for Quillmark rendering"
license = "Apache-2.0"
documentation = "https://docs.rs/quillmark"
homepage = "https://github.com/nibsbin/quillmark"
repository = "https://github.com/nibsbin/quillmark"

[[bin]]
name = "quillmark-cli"
path = "src/main.rs"

[dependencies]
quillmark = { workspace = true, features = ["typst"] }
quillmark-core = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
