[package]
name = "quillmark-core"
version = "0.1.0"
edition = "2021"
description = "Core types and traits for the quillmark markdown rendering library"
license = "MIT"
repository = "https://github.com/nibsbin/quillmark"

[dependencies]
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.145"
toml = "0.9"
tera = "1.20.0"
minijinja = "2.12.0"

[dev-dependencies]
tempfile = "3.0"
