[package]
name = "quillmark-core"
version.workspace = true
edition.workspace = true
description = "Core types and functionality for Quillmark"
license = "Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
minijinja = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
