[package]
name = "quillmark-fixtures"
version.workspace = true
edition.workspace = true
description = "Test fixtures and utilities for Quillmark"
license = "MIT"
publish = false  # Don't publish test fixtures to crates.io

[dependencies]
quillmark = { path = "../quillmark" }
quillmark-typst = { path = "../quillmark-typst" }