[package]
name = "quillmark-python"
version = "0.1.6"
edition = "2021"
description = "Python bindings for Quillmark"
license = "Apache-2.0"
publish = false

[lib]
name = "_quillmark"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "~0.26", features = ["extension-module", "abi3-py310"] }
quillmark = { path = "../quillmark", features = ["typst"] }
quillmark-core = { path = "../quillmark-core" }
anyhow = {workspace = true}
serde_yaml = {workspace = true}