[package]
name = "quillmark-typst"
version = "0.1.0"
edition = "2021"
description = "Typst backend for Quillmark"
license = "Apache-2.0"

[dependencies]
fontdb = { workspace = true }
pulldown-cmark = { workspace = true }
quillmark-core = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
typst = { workspace = true }
typst-kit = { workspace = true }
typst-pdf = { workspace = true }
typst-svg = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

