[package]
name = "quillmark-typst"
version.workspace = true
edition.workspace = true
include.workspace = true
readme.workspace = true
description = "Typst backend for Quillmark"
license = "Apache-2.0"
documentation = "https://docs.rs/quillmark-typst"
homepage = "https://github.com/nibsbin/quillmark"
repository = "https://github.com/nibsbin/quillmark"

[dependencies]
anyhow = { workspace = true }
fontdb = { workspace = true }
pulldown-cmark = { workspace = true }
quillmark-core = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
typst = { workspace = true }
typst-kit = { workspace = true, default-features = false, features = ["fonts"] }
typst-pdf = { workspace = true }
typst-svg = { workspace = true }
dirs = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }

[features]
default = ["native"]
native = ["typst-kit/packages", "typst-kit/embed-fonts", "dep:dirs"]

