[package]
name = "quillmark-wasm"
version = "0.0.13"
edition = "2021"
description = "WebAssembly bindings for quillmark"
license = "Apache-2.0"
repository = "https://github.com/nibsbin/quillmark"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
quillmark = { workspace = true, default-features = false, features = ["typst"] }
quillmark-core = { workspace = true }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
