[package]
name = "quillmark"
version = "0.1.0"
edition = "2021"
description = "Quillmark sealed engine API"
license = "Apache-2.0"

[dependencies]
quillmark-core = { workspace = true }
quillmark-typst = { workspace = true, optional = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
quillmark-typst = { workspace = true }
quillmark-fixtures = { workspace = true }

[features]
default = ["typst"]
typst = ["dep:quillmark-typst"]

