[package]
name = "quillmark-cli"
version.workspace = true
edition.workspace = true
description = "Command-line interface for Quillmark"
license.workspace = true
publish = false

[[bin]]
name = "quillmark"
path = "src/main.rs"

[dependencies]
clap = { version = "~4.5", features = ["derive"] }
quillmark = { version = "0.6.12", path = "../../quillmark", default-features = true }
quillmark-core = { version = "0.6.12", path = "../../quillmark-core" }
anyhow = { version = "~1.0" }

[profile.release]
# Inherit from workspace but optimize for size
opt-level = "z"
lto = true
strip = true
codegen-units = 1
