[package]
name = "quillmark-cli"
version.workspace = true
edition.workspace = true
description = "Command-line interface for the Quillmark Markdown rendering system"
license.workspace = true
readme = "README.md"
homepage = "https://github.com/nibsbin/quillmark"
repository = "https://github.com/nibsbin/quillmark"
keywords = ["markdown", "pdf", "typst", "template", "cli"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "quillmark"
path = "src/main.rs"

[dependencies]
clap = { version = "~4.5", features = ["derive"] }
quillmark = { workspace = true, default-features = true }
quillmark-core = { workspace = true }
anyhow = { workspace = true}

[profile.release]
# Inherit from workspace but optimize for size
opt-level = "z"
lto = true
strip = true
codegen-units = 1
